# rust-sysid

./: CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.claude/: instructions-bindings.md  instructions-implement.md  instructions-research.md  instructions-review.md  instructions-validate.md
.github/workflows/: ci.yml
crates/rust_sysid/: Cargo.toml
crates/rust_sysid/src/: lib.rs  main.rs
crates/rust_sysid_py/: Cargo.toml
crates/rust_sysid_py/src/: lib.rs
examples/: matrix_multiplication_example.py
