[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rust_sysid"
version = "0.1.0"
description = "System identification library"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = ["pytest", "maturin>=1.5,<2.0"]

[tool.maturin]
manifest-path = "crates/rust_sysid_py/Cargo.toml"
module-name = "rust_sysid"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
    { file = "crates/*/Cargo.toml" },
    { file = "crates/*/src/**/*.rs" },
]
